# handwriting-generation

./: .gitignore  LICENSE  README.md  app.py  full_sample.py  generate_dataset.py  image_classification.py  main.py  periodic_checkpoint.py  prepare_data.py  pyproject.toml  synthesize.py  train.py  train_style_classificator.py  writer_classification.py
configs/: config.py  constants.py  settings.py
configs/ConvNeXt/: base_diffusion_mps.yaml  best_diffusion_gpu.yaml  best_latentdiffusion_gpu.yaml
configs/Diffusion/: base_gpu.yaml  base_mps.yaml
configs/LatentDiffusion/: base_gpu.yaml  best_gpu.yaml
configs/RNN/: base_gpu.yaml
data/: data_filtering.py  dataset.py  tokenizer.py  utils.py
data/json_writer_ids/: train_writer_ids_iamdb.json  train_writer_ids_iamondb.json  val_writer_ids_iamdb.json  val_writer_ids_iamondb.json
metrics/: backbones.py  base_dataset.py  base_score.py  distances.py  folder_dataset.py  scores.py  transforms.py
models/: ema.py
models/ConvNeXt/: model.py  utils.py
models/Diffusion/: attention.py  cnn.py  encoder.py  inv_sqrt_scheduler.py  model.py  text_style.py  utils.py
models/InceptionV3/: model.py  utils.py
models/LatentDiffusion/: activation.py  attention.py  ema.py  encoder.py  model.py  residual.py  transformers.py  unet.py  utils.py
models/RNN/: lstm.py  model.py  network.py  utils.py  window.py
raw_data/IAMDB/: iam_test.filter  iam_tr_va1.filter  iam_va2.filter
raw_data/IAMonDB/: iamondb_tr_va1.filter
utils/: callbacks.py  data_utils.py  train_utils.py  utils.py
