[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jakub Kujawa", email = "ZK_Jakub@proton.me"},
]
dependencies = [
    "gradio>=4.3.0",
    "torch @ https://download.pytorch.org/whl/test/cu121/torch-2.1.1%2Bcu121-cp311-cp311-linux_x86_64.whl",
    "torchvision @ https://download.pytorch.org/whl/test/cu121/torchvision-0.16.1%2Bcu121-cp311-cp311-linux_x86_64.whl",
    "torchaudio @ https://download.pytorch.org/whl/test/cu121/torchaudio-2.1.1%2Bcu121-cp311-cp311-linux_x86_64.whl",
    "lightning[extra]>=2.1.1",
    "torchmetrics>=1.2.0",
    "einops>=0.7.0",
    "neptune>=1.8.3",
    "dataclass-wizard>=0.22.2",
    "setuptools>=68.2.2",
    "h5py>=3.10.0",
    "diffusers[torch]>=0.23.0",
    "potracer>=0.0.4",
    "clean-fid>=0.1.35",
    "black>=23.11.0",
]
requires-python = ">=3.8,<3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
post_init = { composite = ["pdm install"] }